# exoplanet-data-analysis

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
kubernetes/prod/: app-prod-deployment-FastAPI.yml  app-prod-deployment-redis.yml  app-prod-deployment-worker.yml  app-prod-ingress-FastAPI.yml  app-prod-pvc-redis.yml  app-prod-service-FastAPI.yml  app-prod-service-nodeport-FastAPI.yml  app-prod-service-redis.yml
kubernetes/test/: app-test-deployment-FastAPI.yml  app-test-deployment-redis.yml  app-test-deployment-worker.yml  app-test-ingress-FastAPI.yml  app-test-pvc-redis.yml  app-test-service-FastAPI.yml  app-test-service-nodeport-FastAPI.yml  app-test-service-redis.yml
src/: FastAPI_api.py  jobs.py  worker.py
test/: test_api.py  test_jobs.py  test_worker.py
