[project]
name = "coe332-christinegoh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "hotqueue>=0.2.8",
    "matplotlib>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "redis>=7.4.0",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "xmltodict>=1.0.4",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
